--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,8 +9,6 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  
-  
   <servlet>
     <servlet-name>login</servlet-name>
     <servlet-class>attic.web.servlet.Login</servlet-class>
@@ -19,6 +17,7 @@
     <servlet-name>login</servlet-name>
     <url-pattern>/backend/login</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>logout</servlet-name>
     <servlet-class>attic.web.servlet.Logout</servlet-class>
@@ -27,6 +26,7 @@
     <servlet-name>logout</servlet-name>
     <url-pattern>/backend/logout</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>register</servlet-name>
     <servlet-class>attic.web.servlet.Register</servlet-class>
@@ -35,4 +35,14 @@
     <servlet-name>register</servlet-name>
     <url-pattern>/register</url-pattern>
   </servlet-mapping>
+  
+    <servlet>
+    <servlet-name>module</servlet-name>
+    <servlet-class>attic.web.servlet.ModuleSet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>module</servlet-name>
+    <url-pattern>/module</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
