--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,7 +15,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>login</servlet-name>
-    <url-pattern>/backend/login</url-pattern>
+    <url-pattern>/student/login</url-pattern>
   </servlet-mapping>
   
   <servlet>
@@ -24,7 +24,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>logout</servlet-name>
-    <url-pattern>/backend/logout</url-pattern>
+    <url-pattern>/student/logout</url-pattern>
   </servlet-mapping>
   
   <servlet>
@@ -33,7 +33,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>register</servlet-name>
-    <url-pattern>/register</url-pattern>
+    <url-pattern>/student/register</url-pattern>
   </servlet-mapping>
   
     <servlet>
